--- a/source/detail.html.erb
+++ b/source/detail.html.erb
@@ -1,8 +1,7 @@
 <div class="persona-detail-wrapper animated flex flex-wrap bg-white">
   <div
     class="col col-12 persona-image animated flex items-end relative"
-    data-bg="<%= persona_portrait %>"
-    style="<%= base64_image(persona_portrait) %>"
+    style="background-image:url(<%= persona_portrait %>)"
     >
     <a href="/" class="btn btn-close" id="closeBtn">
       <img src="images/icon-close.svg" alt="">
