--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -156,9 +156,9 @@ header {
 
   &:after {
     content: '';
-    background: #16BFFD; /* fallback for old browsers */
+    background: #179990; /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #16BFFD , #CB3066); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to left, #16BFFD , #CB3066); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right, #179990, rgba(0,100,200,1)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     pointer-events: none;
     position: absolute;
     opacity: 0;
